# llm-anonymizer

./: README.md  pyproject.toml
src/: anonymize.py  input.txt  output.txt
